TParser.java
// $ANTLR 3.5.2 T.g 2021-05-04 13:16:04

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class TParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENTS", "Digit", "ID", "Letter", 
		"Num", "String", "WS", "'('", "')'", "')='", "'+'", "','", "'-'", "':'", 
		"':-'", "':]'", "'='", "'['", "'[-'", "'[:'", "'[:-'", "']'", "'print'"
	};
	public static final int EOF=-1;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int COMMENTS=4;
	public static final int Digit=5;
	public static final int ID=6;
	public static final int Letter=7;
	public static final int Num=8;
	public static final int String=9;
	public static final int WS=10;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return TParser.tokenNames; }
	@Override public String getGrammarFileName() { return "T.g"; }


		Helper h= new Helper();



	// $ANTLR start "prog"
	// T.g:15:1: prog : ( stmt )+ ;
	public final void prog() throws RecognitionException {
		try {
			// T.g:15:11: ( ( stmt )+ )
			// T.g:15:13: ( stmt )+
			{
			// T.g:15:13: ( stmt )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID||LA1_0==11||LA1_0==26) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// T.g:15:14: stmt
					{
					pushFollow(FOLLOW_stmt_in_prog41);
					stmt();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prog"



	// $ANTLR start "stmt"
	// T.g:18:1: stmt : ( assign | print | unpack );
	public final void stmt() throws RecognitionException {
		try {
			// T.g:18:12: ( assign | print | unpack )
			int alt2=3;
			switch ( input.LA(1) ) {
			case ID:
				{
				alt2=1;
				}
				break;
			case 26:
				{
				alt2=2;
				}
				break;
			case 11:
				{
				alt2=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// T.g:18:14: assign
					{
					pushFollow(FOLLOW_assign_in_stmt69);
					assign();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// T.g:19:9: print
					{
					pushFollow(FOLLOW_print_in_stmt83);
					print();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					// T.g:20:9: unpack
					{
					pushFollow(FOLLOW_unpack_in_stmt98);
					unpack();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "stmt"



	// $ANTLR start "assign"
	// T.g:23:1: assign : n= ID '=' a= add ;
	public final void assign() throws RecognitionException {
		Token n=null;
		expression a =null;

		try {
			// T.g:23:14: (n= ID '=' a= add )
			// T.g:23:16: n= ID '=' a= add
			{
			n=(Token)match(input,ID,FOLLOW_ID_in_assign122); if (state.failed) return;
			match(input,20,FOLLOW_20_in_assign124); if (state.failed) return;
			pushFollow(FOLLOW_add_in_assign128);
			a=add();
			state._fsp--;
			if (state.failed) return;
			if ( state.backtracking==0 ) {h.variabledeclare((n!=null?n.getText():null), a);}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "assign"



	// $ANTLR start "values"
	// T.g:27:1: values returns [expression val] : (v= val v2= values_tail |v1= values_tail );
	public final expression values() throws RecognitionException {
		expression val = null;


		expression v =null;
		expression v2 =null;
		expression v1 =null;

		try {
			// T.g:27:36: (v= val v2= values_tail |v1= values_tail )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==ID||(LA3_0 >= Num && LA3_0 <= String)||LA3_0==11||LA3_0==16) ) {
				alt3=1;
			}
			else if ( (LA3_0==12||LA3_0==15) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return val;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// T.g:27:38: v= val v2= values_tail
					{
					pushFollow(FOLLOW_val_in_values158);
					v=val();
					state._fsp--;
					if (state.failed) return val;
					pushFollow(FOLLOW_values_tail_in_values162);
					v2=values_tail();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val = h.merge(v,v2);}
					}
					break;
				case 2 :
					// T.g:28:9: v1= values_tail
					{
					pushFollow(FOLLOW_values_tail_in_values179);
					v1=values_tail();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val = v1;}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return val;
	}
	// $ANTLR end "values"



	// $ANTLR start "values_tail"
	// T.g:31:1: values_tail returns [expression val] : ( ',' v= val v2= values_tail | ')' );
	public final expression values_tail() throws RecognitionException {
		expression val = null;


		expression v =null;
		expression v2 =null;

		try {
			// T.g:31:40: ( ',' v= val v2= values_tail | ')' )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==15) ) {
				alt4=1;
			}
			else if ( (LA4_0==12) ) {
				alt4=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return val;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// T.g:31:42: ',' v= val v2= values_tail
					{
					match(input,15,FOLLOW_15_in_values_tail205); if (state.failed) return val;
					pushFollow(FOLLOW_val_in_values_tail209);
					v=val();
					state._fsp--;
					if (state.failed) return val;
					pushFollow(FOLLOW_values_tail_in_values_tail213);
					v2=values_tail();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val = h.merge(v,v2);}
					}
					break;
				case 2 :
					// T.g:32:9: ')'
					{
					match(input,12,FOLLOW_12_in_values_tail227); if (state.failed) return val;
					if ( state.backtracking==0 ) {val = new expression("ClosingParentheses");}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return val;
	}
	// $ANTLR end "values_tail"



	// $ANTLR start "val"
	// T.g:35:1: val returns [expression val] : (s= String |I= intt |t= tuple |id= ID );
	public final expression val() throws RecognitionException {
		expression val = null;


		Token s=null;
		Token id=null;
		expression I =null;
		expression t =null;

		try {
			// T.g:35:33: (s= String |I= intt |t= tuple |id= ID )
			int alt5=4;
			switch ( input.LA(1) ) {
			case String:
				{
				alt5=1;
				}
				break;
			case Num:
			case 16:
				{
				alt5=2;
				}
				break;
			case 11:
				{
				alt5=3;
				}
				break;
			case ID:
				{
				alt5=4;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return val;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// T.g:35:35: s= String
					{
					s=(Token)match(input,String,FOLLOW_String_in_val260); if (state.failed) return val;
					if ( state.backtracking==0 ) {val =new expression ((s!=null?s.getText():null));}
					}
					break;
				case 2 :
					// T.g:36:9: I= intt
					{
					pushFollow(FOLLOW_intt_in_val278);
					I=intt();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =I;}
					}
					break;
				case 3 :
					// T.g:37:9: t= tuple
					{
					pushFollow(FOLLOW_tuple_in_val296);
					t=tuple();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =t;}
					}
					break;
				case 4 :
					// T.g:38:9: id= ID
					{
					id=(Token)match(input,ID,FOLLOW_ID_in_val314); if (state.failed) return val;
					if ( state.backtracking==0 ) {val =h.getVal((id!=null?id.getText():null));}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return val;
	}
	// $ANTLR end "val"



	// $ANTLR start "add"
	// T.g:41:1: add returns [expression val] : (a1= addint |a2= addstring |a3= addid |a4= addtuple |a5= addslice );
	public final expression add() throws RecognitionException {
		expression val = null;


		expression a1 =null;
		String a2 =null;
		expression a3 =null;
		expression a4 =null;
		expression a5 =null;

		try {
			// T.g:41:33: (a1= addint |a2= addstring |a3= addid |a4= addtuple |a5= addslice )
			int alt6=5;
			switch ( input.LA(1) ) {
			case Num:
			case 16:
				{
				alt6=1;
				}
				break;
			case String:
				{
				alt6=2;
				}
				break;
			case ID:
				{
				int LA6_3 = input.LA(2);
				if ( (LA6_3==EOF||LA6_3==ID||LA6_3==11||LA6_3==14||LA6_3==26) ) {
					alt6=3;
				}
				else if ( ((LA6_3 >= 21 && LA6_3 <= 24)) ) {
					alt6=5;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return val;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 11:
				{
				alt6=4;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return val;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// T.g:41:35: a1= addint
					{
					pushFollow(FOLLOW_addint_in_add344);
					a1=addint();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =a1;}
					}
					break;
				case 2 :
					// T.g:42:9: a2= addstring
					{
					pushFollow(FOLLOW_addstring_in_add361);
					a2=addstring();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =new expression(a2);}
					}
					break;
				case 3 :
					// T.g:43:9: a3= addid
					{
					pushFollow(FOLLOW_addid_in_add378);
					a3=addid();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =a3;}
					}
					break;
				case 4 :
					// T.g:44:9: a4= addtuple
					{
					pushFollow(FOLLOW_addtuple_in_add395);
					a4=addtuple();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =a4;}
					}
					break;
				case 5 :
					// T.g:45:9: a5= addslice
					{
					pushFollow(FOLLOW_addslice_in_add412);
					a5=addslice();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =a5;}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return val;
	}
	// $ANTLR end "add"



	// $ANTLR start "addint"
	// T.g:48:1: addint returns [expression val] : (i1= intt '+' a= add |i2= intt );
	public final expression addint() throws RecognitionException {
		expression val = null;


		expression i1 =null;
		expression a =null;
		expression i2 =null;

		try {
			// T.g:48:35: (i1= intt '+' a= add |i2= intt )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==Num) ) {
				int LA7_1 = input.LA(2);
				if ( (LA7_1==14) ) {
					alt7=1;
				}
				else if ( (LA7_1==EOF||LA7_1==ID||LA7_1==11||LA7_1==26) ) {
					alt7=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return val;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA7_0==16) ) {
				int LA7_2 = input.LA(2);
				if ( (LA7_2==Num) ) {
					int LA7_5 = input.LA(3);
					if ( (LA7_5==14) ) {
						alt7=1;
					}
					else if ( (LA7_5==EOF||LA7_5==ID||LA7_5==11||LA7_5==26) ) {
						alt7=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return val;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 5, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return val;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return val;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// T.g:48:37: i1= intt '+' a= add
					{
					pushFollow(FOLLOW_intt_in_addint440);
					i1=intt();
					state._fsp--;
					if (state.failed) return val;
					match(input,14,FOLLOW_14_in_addint442); if (state.failed) return val;
					pushFollow(FOLLOW_add_in_addint446);
					a=add();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =h.addint(i1,a);}
					}
					break;
				case 2 :
					// T.g:49:9: i2= intt
					{
					pushFollow(FOLLOW_intt_in_addint462);
					i2=intt();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =i2;}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return val;
	}
	// $ANTLR end "addint"



	// $ANTLR start "addstring"
	// T.g:52:1: addstring returns [String val] : (s1= String '+' a= addstring |s2= String );
	public final String addstring() throws RecognitionException {
		String val = null;


		Token s1=null;
		Token s2=null;
		String a =null;

		try {
			// T.g:52:33: (s1= String '+' a= addstring |s2= String )
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==String) ) {
				int LA8_1 = input.LA(2);
				if ( (LA8_1==14) ) {
					alt8=1;
				}
				else if ( (LA8_1==EOF||LA8_1==ID||LA8_1==11||LA8_1==26) ) {
					alt8=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return val;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return val;}
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// T.g:52:35: s1= String '+' a= addstring
					{
					s1=(Token)match(input,String,FOLLOW_String_in_addstring489); if (state.failed) return val;
					match(input,14,FOLLOW_14_in_addstring491); if (state.failed) return val;
					pushFollow(FOLLOW_addstring_in_addstring495);
					a=addstring();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =h.addstring((s1!=null?s1.getText():null),a);}
					}
					break;
				case 2 :
					// T.g:53:9: s2= String
					{
					s2=(Token)match(input,String,FOLLOW_String_in_addstring510); if (state.failed) return val;
					if ( state.backtracking==0 ) {val =(s2!=null?s2.getText():null);}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return val;
	}
	// $ANTLR end "addstring"



	// $ANTLR start "addtuple"
	// T.g:56:1: addtuple returns [expression val] : (t1= tuple '+' a= add |t2= tuple );
	public final expression addtuple() throws RecognitionException {
		expression val = null;


		expression t1 =null;
		expression a =null;
		expression t2 =null;

		try {
			// T.g:56:37: (t1= tuple '+' a= add |t2= tuple )
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==11) ) {
				int LA9_1 = input.LA(2);
				if ( (synpred15_T()) ) {
					alt9=1;
				}
				else if ( (true) ) {
					alt9=2;
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return val;}
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}

			switch (alt9) {
				case 1 :
					// T.g:56:39: t1= tuple '+' a= add
					{
					pushFollow(FOLLOW_tuple_in_addtuple538);
					t1=tuple();
					state._fsp--;
					if (state.failed) return val;
					match(input,14,FOLLOW_14_in_addtuple540); if (state.failed) return val;
					pushFollow(FOLLOW_add_in_addtuple544);
					a=add();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =h.addtuple(t1,a);}
					}
					break;
				case 2 :
					// T.g:57:9: t2= tuple
					{
					pushFollow(FOLLOW_tuple_in_addtuple560);
					t2=tuple();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =t2;}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return val;
	}
	// $ANTLR end "addtuple"



	// $ANTLR start "addid"
	// T.g:60:1: addid returns [expression val] : (n1= ID '+' a= add |n2= ID );
	public final expression addid() throws RecognitionException {
		expression val = null;


		Token n1=null;
		Token n2=null;
		expression a =null;

		try {
			// T.g:60:35: (n1= ID '+' a= add |n2= ID )
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==ID) ) {
				int LA10_1 = input.LA(2);
				if ( (LA10_1==14) ) {
					alt10=1;
				}
				else if ( (LA10_1==EOF||LA10_1==ID||LA10_1==11||LA10_1==26) ) {
					alt10=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return val;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 10, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return val;}
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}

			switch (alt10) {
				case 1 :
					// T.g:60:37: n1= ID '+' a= add
					{
					n1=(Token)match(input,ID,FOLLOW_ID_in_addid589); if (state.failed) return val;
					match(input,14,FOLLOW_14_in_addid591); if (state.failed) return val;
					pushFollow(FOLLOW_add_in_addid595);
					a=add();
					state._fsp--;
					if (state.failed) return val;
					if ( state.backtracking==0 ) {val =h.add((n1!=null?n1.getText():null),a);}
					}
					break;
				case 2 :
					// T.g:61:9: n2= ID
					{
					n2=(Token)match(input,ID,FOLLOW_ID_in_addid611); if (state.failed) return val;
					if ( state.backtracking==0 ) {val =h.getVal((n2!=null?n2.getText():null));}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return val;
	}
	// $ANTLR end "addid"



	// $ANTLR start "addslice"
	// T.g:64:1: addslice returns [expression val] : (s1= slice '+' a= add |s2= slice );
	public final expression addslice() throws RecognitionException {
		expression val = null;


		expression s1 =null;
		expression a =null;
		expression s2 =null;

		try {
			// T.g:64:37: (s1= slice '+' a= add |s2= slice )
			int alt11=2;
			int LA11_0 = input.LA(1);
			if ( (LA11_0==ID) ) {
				switch ( input.LA(2) ) {
				case 21:
					{
					int LA11_2 = input.LA(3);
					if ( (LA11_2==Num) ) {
						switch ( input.LA(4) ) {
						case 25:
							{
							int LA11_10 = input.LA(5);
							if ( (LA11_10==14) ) {
								alt11=1;
							}
							else if ( (LA11_10==EOF||LA11_10==ID||LA11_10==11||LA11_10==26) ) {
								alt11=2;
							}

							else {
								if (state.backtracking>0) {state.failed=true; return val;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 11, 10, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

							}
							break;
						case 17:
							{
							int LA11_11 = input.LA(5);
							if ( (LA11_11==Num) ) {
								int LA11_22 = input.LA(6);
								if ( (LA11_22==25) ) {
									int LA11_26 = input.LA(7);
									if ( (LA11_26==14) ) {
										alt11=1;
									}
									else if ( (LA11_26==EOF||LA11_26==ID||LA11_26==11||LA11_26==26) ) {
										alt11=2;
									}

									else {
										if (state.backtracking>0) {state.failed=true; return val;}
										int nvaeMark = input.mark();
										try {
											for (int nvaeConsume = 0; nvaeConsume < 7 - 1; nvaeConsume++) {
												input.consume();
											}
											NoViableAltException nvae =
												new NoViableAltException("", 11, 26, input);
											throw nvae;
										} finally {
											input.rewind(nvaeMark);
										}
									}

								}

								else {
									if (state.backtracking>0) {state.failed=true; return val;}
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 11, 22, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}

							else {
								if (state.backtracking>0) {state.failed=true; return val;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 11, 11, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

							}
							break;
						case 19:
							{
							int LA11_12 = input.LA(5);
							if ( (LA11_12==14) ) {
								alt11=1;
							}
							else if ( (LA11_12==EOF||LA11_12==ID||LA11_12==11||LA11_12==26) ) {
								alt11=2;
							}

							else {
								if (state.backtracking>0) {state.failed=true; return val;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 11, 12, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

							}
							break;
						case 18:
							{
							int LA11_13 = input.LA(5);
							if ( (LA11_13==Num) ) {
								int LA11_23 = input.LA(6);
								if ( (LA11_23==25) ) {
									int LA11_27 = input.LA(7);
									if ( (LA11_27==14) ) {
										alt11=1;
									}
									else if ( (LA11_27==EOF||LA11_27==ID||LA11_27==11||LA11_27==26) ) {
										alt11=2;
									}

									else {
										if (state.backtracking>0) {state.failed=true; return val;}
										int nvaeMark = input.mark();
										try {
											for (int nvaeConsume = 0; nvaeConsume < 7 - 1; nvaeConsume++) {
												input.consume();
											}
											NoViableAltException nvae =
												new NoViableAltException("", 11, 27, input);
											throw nvae;
										} finally {
											input.rewind(nvaeMark);
										}
									}

								}

								else {
									if (state.backtracking>0) {state.failed=true; return val;}
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 11, 23, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}

							else {
								if (state.backtracking>0) {state.failed=true; return val;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 11, 13, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

							}
							break;
						default:
							if (state.backtracking>0) {state.failed=true; return val;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 11, 6, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}
					}

					else {
						if (state.backtracking>0) {state.failed=true; return val;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 11, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case 23:
					{
					int LA11_3 = input.LA(3);
					if ( (LA11_3==Num) ) {
						int LA11_7 = input.LA(4);
						if ( (LA11_7==25) ) {
							int LA11_14 = input.LA(5);
							if ( (LA11_14==14) ) {
								alt11=1;
							}
							else if ( (LA11_14==EOF||LA11_14==ID||LA11_14==11||LA11_14==26) ) {
								alt11=2;
							}

							else {
								if (state.backtracking>0) {state.failed=true; return val;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 11, 14, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}
